Bỏ về ADMIN và bỏ patch /me
